--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -96,7 +96,8 @@ button {
 @color-book: #8c3fbf;
 @color-job: #f49c20;
 @color-food: #0ead91;
-@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book;
+@color-blue: #3293f6;
+@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue;
 
 
 .loop2(@index2) when (@index2 <= length(@list-colors)) {
