--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -4,6 +4,9 @@
     .inTheMiddle();
     width: 100vw;
     height: 100vh;
+    position:fixed;
+    background-color:rgba(255, 255, 255,.8);
+    z-index:1;
 }
 .flex-fix {
     min-width: 0;
