--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -43,7 +43,8 @@
     top: @upperSpace;
 
     .side-bar-wrapper {
-        max-width: 264px;
+        max-width: 270px;
+        max-height: 250px;
     }
 }
 
