--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -123,6 +123,11 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background:none;
 }
 
+.full-height {
+    height: 100%;
+}
+
+
 .cdn-only {
     position:absolute;
 }
