--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -110,20 +110,20 @@
 
 .placeholder-color(@color) {
 
-    input::-webkit-input-placeholder {
-        color: @color;
+    &::-webkit-input-placeholder {
+        color: @color !important;
     }
 
-    input::-moz-placeholder {
-        color: @color;
+    &::-moz-placeholder {
+        color: @color !important;
     }
 
-    input:-ms-input-placeholder {
-        color: @color;
+    &:-ms-input-placeholder {
+        color: @color !important;
     }
 
-    input:-moz-placeholder {
-        color: @color;
+    &:-moz-placeholder {
+        color: @color !important;
     }
 }
 .flexSameSize() {
