Food & deals details mobile design

--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -49,4 +49,10 @@
         border-radius: 4px;
         overflow: hidden;
     }
+
+    @media(max-width: @mobileEndBreakPoint) {
+        iframe {
+            max-height: 100vh;
+        }
+    }
 }
