--- a/Cloudents.Web/ClientApp/components/book/bookCell.less
+++ b/Cloudents.Web/ClientApp/components/book/bookCell.less
@@ -3,6 +3,8 @@
 .book-cell {
     display: block;
     width: 100%;
+    background: #fff;
+    border-radius: 4px;
     /*.btn {
         > div {
             letter-spacing: -0.3px;
