--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -5,7 +5,7 @@
 }
 
 .dialog-choose {
-    @search-width: 784px;
+    @search-width: 788px;
     @course-width: 176px;
 
     background: @color-white;
@@ -115,7 +115,7 @@
         }
     }
 
-    .divider {
+    .results-divider {
         margin: 0 auto;
         max-width: @search-width - 32px
     }
@@ -221,7 +221,7 @@
             .uni {
                 width: 96px;
                 text-align: center;
-                color: #fff;
+                color: #000;
                 font-size: 12px;
                 line-height: 1.17;
                 letter-spacing: -0.5px;
@@ -231,7 +231,7 @@
                     overflow: hidden;
                     height: 96px;
                     width: 96px;
-                    background-color: white;
+                    background-color: #eee;
                     background-size: contain;
                     background-position: center;
                 }
