--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -3,7 +3,7 @@
 .sort-filter-wrap {
     position: -webkit-sticky;
     position: sticky;
-    top: @navBarHeightDesktop + 48;
+    top: @navBarHeightMdAndUp;
     padding-top: 12px;
     /*position: sticky;
     top: 74px;*/
