--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -137,9 +137,9 @@
 }
 
 // Size constants
-@navBarHeightDesktop: 72px;
-@navBarHeightMobile: 96px;
+@navBarHeightMdAndUp: 120px;
+//@navBarHeightMobile: 96px;
 @resultsFilterWidth: 230px;
-@resultsTabsHeight: 52px;
+//@resultsTabsHeight: 52px;
 @mobileEndBreakPoint: 599px;
 @tabletEndBreakPoint: 959px;
