--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -51,6 +51,7 @@
         font-size: 14px;
         font-weight: 600;
         letter-spacing: -0.2px;
+        opacity:1;
     }
 
     .toolbar__content > *:not(.btn):not(.menu):last-child,
