--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -6,6 +6,10 @@
     margin-top: 98px;
     max-width: 1128px;
 
+    @media(max-width: @tabletEndBreakPoint){
+        max-width: 768px;
+    }
+
     @media(max-width: 600px) {
         margin-top: 16px;
     }
