--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -21,6 +21,10 @@
 
         .strip-content {
             flex-wrap: wrap;
+
+            @media(max-width: @tabletEndBreakPoint) {
+                max-width: 768px;
+            }
         }
     }
 
