--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -96,17 +96,14 @@
     //height: 100%;
     @media(max-width: @tabletEndBreakPoint) {
         //margin: 8px;
-        max-width: 100%;
-        margin: -8px 8px 0 !important; // hack on top because the two cells are in the same height( blame Shlomi)
+        max-width: 768px;
+        margin: -8px auto 0 !important; // hack on top because the two cells are in the same height( blame Shlomi)
     }
 
     form {
         width: 100%;
     }
-
-
-
-
+    
     button[type="submit"] {
         border: none;
         display: inline-block;
