--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -15,6 +15,12 @@
         .inTheMiddle();
     }
 
+    .toolbar__extension {
+        @media(max-width: @tabletEndBreakPoint) {
+            padding: 0 8px;
+        }
+    }
+
     .toolbar__content {
         max-width: 1280px;
         margin: 0 auto;
