--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -113,6 +113,11 @@
         .websites {
             padding: 18px 0 0;
             max-width: 1280px;
+
+
+            @media(max-width: @tabletEndBreakPoint) {
+                max-width: 768px;
+            }
         }
 
         .logos {
