--- a/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
+++ b/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
@@ -1,33 +1,51 @@
 ﻿@import "../../mixin.less";
 
-.card {
-    border-radius: 6px;
-}
+.personalize-dialog {
+        border-radius: 6px;
+    
 
-.card__title {
-    font-size: 36px;
-    font-weight: 300;
-    letter-spacing: -0.5px;
-    text-align: center;
-    color: @Spitball-Text;
-    display: block; //override
-}
+    .card__title {
+        font-size: 36px;
+        font-weight: 300;
+        letter-spacing: -0.5px;
+        text-align: center;
+        color: @Spitball-Text;
+        display: block; //override
+    }
 
-.card__text {
-    font-size: 16px;
-    letter-spacing: -0.3px;
-    text-align: center;
-    max-width: 360px;
-    margin: 0 auto;
-    line-height: 1.38;
-    color: @Feed-Like-count;
-}
+    .card__text {
+        font-size: 16px;
+        letter-spacing: -0.3px;
+        text-align: center;
+        padding: 0 24px;
+        max-width: 100%;
+        margin: 0 auto;
+        line-height: 1.38;
+        color: @Feed-Like-count;
 
-.btn {
-    text-transform: capitalize;
-    font-size: 16px;
-    letter-spacing: -0.3px;
-    color: @Spitball-Main-color;
+        .input-group.input-group--solo {
+            background: @color-light-grey;
+            min-height: 40px;
+            border: 1px solid @Suggestion-Title-Background;
+            border-radius: 6px;
+
+            .input-group__input {
+                padding: 4px 12px;
+
+                .sbf-search {
+                    min-width: 32px;
+                    color: #9b9b9b !important;
+                }
+            }
+        }
+    }
+
+    .btn {
+        text-transform: capitalize;
+        font-size: 16px;
+        letter-spacing: -0.3px;
+        color: @Spitball-Main-color;
+    }
 }
 
 .overlay {
