case 9281 - implemented personalize cell design in result list

--- a/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
+++ b/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
@@ -1,8 +1,8 @@
 ﻿@import "../../mixin.less";
 
-.personalize-dialog {
-        border-radius: 6px;
-    
+.personalize-wrapper {
+    border-radius: 6px;
+
 
     .card__title {
         font-size: 36px;
@@ -22,20 +22,20 @@
         margin: 0 auto;
         line-height: 1.38;
         color: @Feed-Like-count;
+    }
 
-        .input-group.input-group--solo {
-            background: @color-light-grey;
-            min-height: 40px;
-            border: 1px solid @Suggestion-Title-Background;
-            border-radius: 6px;
+    .input-group.input-group--solo {
+        background: @color-light-grey;
+        min-height: 40px;
+        border: 1px solid @Suggestion-Title-Background;
+        border-radius: 6px;
 
-            .input-group__input {
-                padding: 4px 12px;
+        .input-group__input {
+            padding: 4px 12px;
 
-                .sbf-search {
-                    min-width: 32px;
-                    color: #9b9b9b !important;
-                }
+            .sbf-search {
+                min-width: 32px;
+                color: #9b9b9b !important;
             }
         }
     }
