--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -148,6 +148,9 @@
                 .name {
                     color: @color-white;
                     font-weight: normal;
+                    text-transform: capitalize;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                 }
 
                 .close {
@@ -251,10 +254,11 @@
                 justify-content: center;
                 border: none;
 
-                .code {
+                .name {
                     font-size: 16px;
                     color: white;
                     text-align: center;
+                    text-transform: capitalize;
                 }
             }
 
