--- a/Cloudents.Web/ClientApp/components/results/ResultJob.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultJob.less
@@ -47,6 +47,13 @@
             &:nth-child(3), &:nth-child(4) {
                 margin-top: 14px;
             }
+
+            .company {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                padding-right: 8px;
+            }
         }
     }
 }
