--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -3,7 +3,7 @@
 .h-p-header {
 
     &.toolbar {
-        background-color: transparent;
+        background-color: #f0f0f0;
     }
 
     &.scroll {
