--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -138,14 +138,20 @@
                 cursor: pointer;
 
                 label {
-                    margin-left: 4px;
+                    margin-left: 0;
                     line-height: 24px;
                     .giveMeEllipsisOne;
-                    max-width: 124px;
+                    font-size: 14px;
+                    color: black;
+                    height: 20px;
                 }
 
-                input {
-                    margin-top: 6px;
+                .input-group__input {
+
+                    i.icon {
+                        height: 16px;
+                        font-size: 16px;
+                    }
                 }
             }
 
