--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -84,9 +84,6 @@
 
     .tx-input {
         flex-grow: 1;
-        /*input {
-            width: 100%;
-        }*/
     }
 
     background: rgba(48,46,181, 0.2);
@@ -96,8 +93,9 @@
     //height: 100%;
     @media(max-width: @tabletEndBreakPoint) {
         //margin: 8px;
-        max-width: 768px;
+        max-width: 752px; // this is 768 - 16 margin
         margin: -8px auto 0 !important; // hack on top because the two cells are in the same height( blame Shlomi)
+        
     }
 
     form {
@@ -106,7 +104,8 @@
     
     button[type="submit"] {
         border: none;
-        display: inline-block;
+        .inTheMiddle();
+        //display: inline-block;
         height: @submitHeight;
         font-size: 20px;
         color: #fff;
