Footer design fixes

--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -147,6 +147,7 @@
                 }
 
                 .input-group__input {
+                    min-height: 22px;
 
                     i.icon {
                         height: 16px;
