--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -136,16 +136,55 @@
                 align-items: flex-start;
                 justify-content: flex-start;
                 cursor: pointer;
+                position: relative;
 
                 label {
-                    margin-left: 4px;
                     line-height: 24px;
                     .giveMeEllipsisOne;
                     max-width: 124px;
+                    padding-left: 18px;
+                    cursor: pointer;
                 }
 
                 input {
-                    margin-top: 6px;
+                    display: none;
+
+                    &:checked ~ .checkmark {
+                        background: @color-blue;
+                        opacity: 1;
+
+                        &:after {
+                            display: block;
+                        }
+                    }
+                }
+
+                .checkmark {
+                    position: absolute;
+                    top: 6px;
+                    left: 0px;
+                    width: 12px;
+                    height: 12px;
+                    background: #bbbbbb;
+                    opacity: 0.8;
+                }
+
+                .checkmark:after {
+                    content: "";
+                    position: absolute;
+                    display: none;
+                }
+                /* Style the checkmark/indicator */
+                .checkmark:after {
+                    width: 5px;
+                    height: 8px;
+                    margin-left: 4px;
+                    margin-top: 1px;
+                    border: solid white;
+                    border-width: 0 2px 2px 0;
+                    -webkit-transform: rotate(45deg);
+                    -ms-transform: rotate(45deg);
+                    transform: rotate(45deg);
                 }
             }
 
