--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -131,7 +131,8 @@
         }
 
         .input-group__input {
-            padding: 8px 8px 8px 12px;
+            padding-right: 8px;
+            padding-left: 12px;
 
             input {
                 letter-spacing: -0.4px;
