--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -131,8 +131,7 @@
         }
 
         .input-group__input {
-            padding-right: 8px;
-            padding-left: 12px;
+            padding:0 8px 0 12px;
 
             input {
                 letter-spacing: -0.4px;
