--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -173,9 +173,6 @@
                     content: "";
                     position: absolute;
                     display: none;
-                }
-                /* Style the checkmark/indicator */
-                .checkmark:after {
                     width: 5px;
                     height: 8px;
                     margin-left: 4px;
@@ -185,6 +182,29 @@
                     -webkit-transform: rotate(45deg);
                     -ms-transform: rotate(45deg);
                     transform: rotate(45deg);
+                }
+
+                @media(max-width: @mobileEndBreakPoint) {
+
+                    label {
+                        padding-left: 0;
+                        padding-right: 18px;
+                        width: 100%;
+                    }
+
+                    .checkmark {
+                        top: 15px;
+                        right: 0px;
+                        left: unset;
+                        width: 16px;
+                        height: 16px;
+
+                        &:after {
+                            width: 6px;
+                            height: 11px;
+                            margin-left: 5px;
+                        }
+                    }
                 }
             }
 
@@ -227,21 +247,35 @@
     .toolbar {
         background: @color-white;
 
-        .toolbar-title {
-            font-size: 18px;
-            font-weight: 400;
-            margin-left: 0;
-            letter-spacing: -0.4px;
-        }
+        .toolbar__content {
+            .toolbar-title {
+                font-size: 18px;
+                font-weight: 400;
+                margin-left: 0;
+                letter-spacing: -0.4px;
+            }
 
-        .clear-btn {
-            margin-right: 0;
-            letter-spacing: -0.2px;
+            .clear-btn {
+                margin-right: 0;
+                letter-spacing: -0.2px;
 
-            .btn__content {
-                text-transform: none;
-                color: @color-blue;
-                padding: 0 6px;
+                .btn__content {
+                    text-transform: none;
+                    color: @color-blue;
+                    padding-left: 12px;
+                    padding-right: 0;
+                    padding-left: 8px;
+                }
+            }
+
+            .back.btn {
+                margin-left: 2px;
+
+                .sbf-arrow-button {
+                    transform: rotate(-90deg);
+                    font-size: 12px;
+                    color: #9b9b9b;
+                }
             }
         }
     }
@@ -273,13 +307,15 @@
             text-transform: uppercase;
             color: @color-grey;
             font-size: 14px;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
         }
 
         .sort-switch {
             background: #bbbbbb;
             padding: 1px;
             margin-bottom: 16px;
+            border-radius: 0;
+            box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2);
 
             label {
                 cursor: pointer;
@@ -288,11 +324,18 @@
                 line-height: 48px;
                 color: black;
                 font-weight: 600;
-                background: @color-light-grey;
             }
 
-            input:checked + label {
-                background: @color-white;
+            input {
+                &:checked + label {
+                    background: @color-white;
+                }
+
+                &:not(:checked) + label {
+                    background: @color-light-grey;
+                    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2) inset;
+                    border-left: 1px solid #bbbbbb;
+                }
             }
         }
 
