design fixes in search uni case 9343

--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -50,12 +50,18 @@
 
         .sbf-close {
             font-size: 18px;
-            color: @color-grey;
+            color: #9b9b9b;
         }
 
         .done-btn {
             color: @color-blue;
         }
+    }
+
+    .uni-icon {
+        border-radius: 4px;
+        overflow: hidden;
+        background-color: #eee;
     }
 
     .d-header {
@@ -74,19 +80,22 @@
         }
 
         .title-text {
-            padding: 72px 0 24px 0;
+            padding: 10px 0 30px 0;
 
             img {
-                width: 64px;
-                height: 64px;
+                width: 48px;
+                height: 48px;
+                border-radius: 4px;
+                overflow: hidden;
             }
 
             h1 {
-                font-size: 60px;
+                font-size: 40px;
                 font-weight: 300;
                 color: white;
                 text-align: center;
                 color: @Spitball-Text;
+                letter-spacing: -0.5px;
             }
 
             h5 {
@@ -230,11 +239,6 @@
                 letter-spacing: -0.5px;
 
                 .image {
-                    border-radius: 4px;
-                    overflow: hidden;
-                    height: 96px;
-                    width: 96px;
-                    background-color: #eee;
                     background-size: contain;
                     background-position: center;
                 }
