--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -345,6 +345,15 @@
                     }
                 }
             }
+
+            .uni-empty-state {
+                width: 100%;
+                text-align: center;
+                font-size: 20px;
+                line-height: 24px;
+                margin-top: 60px;
+                letter-spacing: -0.8px;
+            }
         }
     }
 }
