fixes a z-index issue in mobile sort & filter

--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -364,8 +364,9 @@
                     label {
                         margin-left: 0;
                         line-height: 40px;
-                        padding-right: 8px;
                         max-width: none;
+                        padding-right: 20px;
+                        z-index: 1;
                     }
 
                     input {
